# llm-wiki

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  pelib.example.toml  pelib.toml  pyproject.toml
agent-skill/: SKILL.md
docs/: VENDORED_PROJECTS.md
llmwiki/: __init__.py  cli.py  convert.py  image_pipeline.py
pelib/: __init__.py  cli.py  config.py
tests/: test_cli_init.py  test_cli_obsidian_import.py  test_cli_query_promote_batch.py
