[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-execution-library"
version = "0.1.0"
description = "A thin local integration layer that gives multiple AI agents one shared LLM Wiki / execution library."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
pel = "pelib.cli:main"

[tool.setuptools]
packages = ["pelib", "llmwiki", "llmwiki.adapters"]
