[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-wiki"
version = "0.1.0"
description = "A local workflow layer for building and operating one shared LLM Wiki across multiple AI agents."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
pel = "pelib.cli:main"

[tool.setuptools]
packages = ["pelib", "llmwiki", "llmwiki.adapters"]
